[package]
name = "eco-counter-import"
version = "0.1.0"
edition = "2021"
authors = ["Kris Warner <kdwarn@protonmail.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
chrono = "0.4.31"
chrono-tz = "0.8.3"
