[package]
name = "eco-counter-import"
version = "0.1.0"
edition = "2021"
authors = ["Kris Warner <kdwarn@protonmail.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.3.0"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
oracle = "0.5.7"
